# nirodents

./: .gitignore  .pre-commit-config.yaml  CHANGES.rst  Dockerfile  Dockerfile.ants_arm64  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: build-test-deploy.yml  docker.yml
.maint/: paper_author_list.py  update_zenodo.py
docs/notebooks/: brainextraction_tutorial.ipynb
nirodents/: __init__.py  interfaces.py  viz.py
nirodents/cli/: brainextraction.py  plotmask.py
nirodents/data/: __init__.py
nirodents/workflows/: brainextraction.py
