[build-system]
requires = [
    "hatchling>=1.27",
    "hatch-vcs",
    "nipreps-versions",
]
build-backend = "hatchling.build"

[project]
name = "nirodents"
description = "NeuroImaging Rodents (NiRodents) provides processing tools for magnetic resonance images of the rodent brain."
readme = "README.rst"
authors = [{name = "The NiPreps Developers", email = "nipreps@gmail.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "acres >= 0.2.0",
    "nibabel >= 5.1.1",
    "nipype >= 1.9.0",
    "niworkflows >= 1.14.4",
    "scipy >= 1.14",
    "templateflow >= 24.2.2",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/nipreps/nirodents"
NiPreps = "https://www.nipreps.org/"

[project.optional-dependencies]
tests = []
dev = [
    "ruff",
    "pre-commit",
]
duecredit = ["duecredit"]

[project.scripts]
artsBrainExtraction="nirodents.cli.brainextraction:main"
plot_mask="nirodents.cli.plotmask:main"

#
# Hatch configurations
#

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
exclude = [".git_archival.txt"]  # No longer needed in sdist

[tool.hatch.build.targets.wheel]
packages = ["nirodents"]
exclude = [
    "nirodents/data/testdata",  # Large test data directory
]

##  The following two sections configure setuptools_scm in the hatch way

[tool.hatch.version]
source = "vcs"
raw-options = { version_scheme = "nipreps-calver" }

[tool.hatch.build.hooks.vcs]
version-file = "nirodents/_version.py"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.environments]
# Local installs will use editable
default = { features = ["editable"], solve-group = "default" }
# Use "nirodents" feature for production environment, so it is identifiable
nirodents = { features = ["production"], solve-group = "production" }

[tool.pixi.feature.editable.pypi-dependencies]
nirodents = { path = ".", editable = true }
[tool.pixi.feature.production.pypi-dependencies]
nirodents = { path = ".", editable = false }

[tool.pixi.dependencies]
python = "3.12.*"
numpy = "2.2.*"
scipy = "1.15.*"
matplotlib = "3.10.*"
h5py = "3.13.*"

[tool.pixi.target.linux-64.dependencies]
ants = "2.6.*"
mkl = "2024.2.2.*"
mkl-service = "2.4.2.*"

#
# Developer tool configurations
#

# Disable black
[tool.black]
exclude = ".*"

[tool.ruff]
line-length = 99

[tool.ruff.lint]
extend-select = [
  "I",
  "UP",
  "YTT",
  "S",
  "BLE",
  "B",
  "A",
  "C4",
  # "CPY",
  "DTZ",
  "T10",
  # "EM",
  "EXE",
  "FA",
  "ISC",
  "ICN",
  "LOG",
  "PIE",
  "PYI",
  "PT",
  "Q",
  # "SIM",
  # "TID",
  "FLY",
  # "PD",
  "PERF",
  "W",
  "PGH",
  "PLC",
  "PLE",
  "PLW",
  "FURB",
  "RUF",
]
ignore = [
  "S311",  # We are not using random for cryptographic purposes
  "S603",
  "PIE790",
  "PERF203",
  "PLC0415",
  "PLW2901",
  "RUF005",
  "RUF012",
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.format]
quote-style = "single"

[tool.coverage.run]
branch = true
omit = [
    "*/_version.py"
]

[tool.coverage.paths]
source = [
  "nirodents",
  "**/site-packages/nirodents"
]
